# vizz

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  test_matrix.py  test_text_visibility.py
.githooks/: pre-commit
vizz/demo/: e2e_demo.py
vizz/demo/slides/: E2EFlow.json  E2EIntro.json  E2EOutro.json
vizz/flex/: block_mask.py  causal_attention.py  end_to_end.py  flash_backward.py  mod_scene.py  natten.py  ordering_comparison.py  score_mod.py
vizz/presentations/: charts.py  components.py  theme.py
vizz/presentations/ptce_2026_flex_flash/: __init__.py  build.py
vizz/presentations/ptce_2026_flex_flash/assets/: clc_interactive.html
vizz/presentations/ptce_2026_flex_flash/data/: aws_h200_flash.csv  aws_h200_triton_cudnn.csv  flex_adoption_monthly.csv  flex_vs_fav3_causal.csv  gb200_flash.csv  gb200_triton_cudnn.csv
vizz/presentations/ptce_2026_flex_flash/slides/: adoption.py  blackwell_shift.py  flex_extensions.py  how_to_use.py  integration.py  more_coming.py  more_details.py  performance_gap.py  problem.py  results.py  title.py
vizz/quant/: amax_to_scale_animation.py  block_fp_quant_comparison.py  block_scaling_overview.py  mx_base.py  mx_block_scaling.py  mx_scale_swizzling.py  nvfp_block_scaling.py  packing_visualization.py  per_row_fp_quant.py  per_tensor_fp_quant.py  scale_calculation_methods.py  scaling.py  unified_fp_quantization.py  utils.py
vizz/utils/: __init__.py  matrix_formatting.py
