[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vizz"
version = "0.1.0"
description = "A visualization library using Manim"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "driss guessous", email = "drisspguessous@gmail.com" },
]
keywords = ["visualization", "quantization", "manim", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch",
    "manimgl==1.7.2",
    "ruff"
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
ignore = ["F405", "F403"]
